# heartscale

./: .gitignore  ARCHITECTURE.md  README.md  config.yaml.example  heartscale_CC任务书.md  pyproject.toml
heartscale/: cli.py  config.py  db.py  extract.py  limbic.py  models.py  render.py  scheduler.py  scoring.py
heartscale/providers/: base.py  factory.py  openai_compat.py
open-diary/: README.md  diary-cron-prompt.md  heartscale-daily.sh  pre-run.py
seeds/: example.jsonl  relationship_vector.json.example
tests/: test_cli.py  test_config.py  test_db.py  test_extract.py  test_limbic.py  test_providers.py  test_render.py
